# invoice_automation

./: .gitignore  README.md  note.tldr
backend/: requirements.txt
frontend/: index.html
frontend/src/: App.jsx
frontend/src/components/common/: StatusBadge.jsx
frontend/src/constants/: status.js
frontend/src/pages/: Dashboard.jsx  InvoiceDetail.jsx  InvoiceList.jsx  Login.jsx  ReviewQueue.jsx  UploadInvoices.jsx
frontend/src/services/: mockServer.js
frontend/src/store/: index.js
frontend/src/styles/: index.css
frontend/src/utils/: money.js
ocr_engine/: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
ocr_engine/active_learning/: __init__.py  feedback_loop.py  uncertainty.py
ocr_engine/config/: __init__.py  labels.py  settings.py
ocr_engine/data/: __init__.py  converters.py  label_studio.py  public_datasets.py  synthetic.py
ocr_engine/docs/: SETUP.md
ocr_engine/ensemble/: __init__.py  champ_challenger.py
ocr_engine/extraction/: __init__.py  dataset.py  infer.py  layoutlmv3_model.py  metrics.py  train.py
ocr_engine/ocr/: __init__.py  base.py  paddle_engine.py
ocr_engine/preprocessing/: __init__.py  image_ops.py
ocr_engine/scripts/: _probe_paddle.py  auto_label_invoices.py  build_finetune_mix.py  download_datasets.py  evaluate.py  export_for_labelstudio.py  extract_pdf.py  generate_synthetic.py  ingest_review_feedback.py  prepare_custom_pdfs.py  train_layoutlm.py
ocr_engine/tests/: test_converters.py  test_ensemble.py  test_labels.py  test_ocr_base.py  test_preprocessing.py  test_settings.py  test_uncertainty.py
(+9 files in other folders)
